Commit this curse

--- a/src/index.njk
+++ b/src/index.njk
@@ -1,5 +1,12 @@
 ---
-layout: base.njk
-title: Hello World
+layout: base
+title: Cursed Horse
 ---
 
+<article class="cursed">
+<img src="img/head.png" alt="" class="head">
+<img src="img/middle.png" alt="" class="middle">
+<img src="img/rear.png" alt="" class="rear">
+<img src="img/forelegs.png" alt="" class="forelegs">
+<img src="img/hindlegs.png" alt="" class="hindlegs">
+</article>
