--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,20 @@
+@use "typography";
+@use "cursed";
+@use "generative-grid";
+@use "possum-radios";
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+}
+
 body {
   font-family: sans-serif;
   background-color: #f9f9f9;
+}
+
+header,
+main {
+  width: min(100vw - 2rem, 120ch);
+  margin-inline: auto;
 }
